# AndroidZxEmu

app/: build.gradle
app/src/main/: .ini  AndroidManifest.xml  config.cfg
app/src/main/assets/: zxKeyboard.xml
app/src/main/assets/data/: poke.ini  pokes.txt  tap128.zzz  tap48.zzz  tr128.zzz  tr48.zzz
app/src/main/assets/help/: common.html  index.html
app/src/main/assets/textures/: zx_icons.ttl
app/src/main/cpp/: CMakeLists.txt  R.h  layout_form_asm.h  layout_form_bp_list.h  layout_form_browser.h  layout_form_debugger.h  layout_form_pokes.h  layout_form_sel_file.h  layout_form_settings.h  layout_form_tzx.h  layout_form_wait.h  layout_main.h  plan.txt  sshApp.cpp  sshApp.h  sshCommon.cpp  sshCommon.h  sshStyles.h  zFormAssembler.cpp  zFormAssembler.h  zFormBpList.cpp  zFormBpList.h  zFormBrowser.cpp  zFormBrowser.h  zFormDebugger.cpp  zFormDebugger.h  zFormPokes.cpp  zFormPokes.h  zFormSelFile.cpp  zFormSelFile.h  zFormSettings.cpp  zFormSettings.h  zFormTZX.cpp  zFormTZX.h  zRibbonDebugger.cpp  zRibbonDebugger.h  zRibbonTape.cpp  zRibbonTape.h  zSpeccyKeyboard.cpp  zSpeccyKeyboard.h  (+2 more)
app/src/main/cpp/emu/: stkCycles.h  zCpuGS.cpp  zCpus.cpp  zCpus.h  zDevs.cpp  zDevs.h  zDisAsm.cpp  zDisAsm.h  zSpeccy.cpp  zSpeccy.h  zStk.h  zTape.cpp  zVG93.cpp
app/src/main/res/layout/: layout_form_asm.xml  layout_form_bp_list.xml  layout_form_browser.xml  layout_form_debugger.xml  layout_form_pokes.xml  layout_form_sel_file.xml  layout_form_settings.xml  layout_form_tzx.xml  layout_form_wait.xml  layout_main.xml
app/src/main/res/menu/: main_menu.xml
(+56 files in other folders)
